Rewrite file loading code to use resources as InputStreams, implement command line arguments