@@ -5,11 +5,8 @@ import webServer.HelperLibrary;
 import webServer.HttpRequestMethod;
 
 import java.io.IOException;
-import java.net.URISyntaxException;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;;
 
 public class HomeHandler extends PageHandler {
     private final DbManager dbManager;
@@ -39,13 +36,11 @@ public class HomeHandler extends PageHandler {
     private String generateHtml() {
         String templateHtml;
         try {
-            URL templateURL = getClass().getClassLoader().getResource("templates/home.html");
-            assert templateURL != null;
-            templateHtml = new String(Files.readAllBytes(Paths.get(templateURL.toURI())));
+            InputStream fileStream = getClass().getResourceAsStream("/templates/home.html");
+            assert fileStream != null;
+            templateHtml = new String(fileStream.readAllBytes());
         } catch (IOException e) {
             throw new RuntimeException("An error occurred while trying to read the template HTML. Perhaps the file doesn't exist.");
-        } catch (URISyntaxException e) {
-            throw new RuntimeException("An error occurred - URI syntax issue.");
         }
         String[] disruptionHtml = HelperLibrary.generateDisruptions(dbManager.getDisruptionLineNamesAndIds());
         return templateHtml.formatted(disruptionHtml[0], disruptionHtml[1]);
